Fixed sideways scroll bug on mobile by setting overflow to hidden

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,3 @@
 .app-component-wrapper {
-
+    overflow: hidden;
 }
